RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -1,4 +1,6 @@
-# 4.4 InnoDB 스토리지 엔진의 잠금
+# 4. 트랜잭션과 잠금
+
+## 4.4 InnoDB 스토리지 엔진의 잠금
 
 ##### 잠금 정보 조회
 * MySQL 5.0 이하 : `SHOW ENGINE INNODB STATUS`
@@ -7,7 +9,15 @@
 		* INNODB_TRX : 트랜잭션 정보
 		* INNODB_LOCKS : 해당 잠금을 어느 트랜잭션이 가지고 있는지 조회
 		* INNODB_LOCK_WAITS : 잠금 대기 조회
-	* 
+
+### 4.4.1 InnoDB 잠금 방식
+실제 쿼리 개발이나 튜닝에 큰 영향은 없다고 함.
+
+* 낙관적 잠금
+	* 변경하고자 하는 레코드에 대해서
+	* 락을
+* 비관적 잠금
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcxOTU5OTQyNV19
+eyJoaXN0b3J5IjpbLTI4MjYwMzQ0OF19
 -->
