RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -13,11 +13,14 @@
 ### 4.4.1 InnoDB 잠금 방식
 실제 쿼리 개발이나 튜닝에 큰 영향은 없다고 함.
 
-* 낙관적 잠금
+* 낙관적 잠금(optimistic locking)
+	* 각 트랜잭션이 같은 레코드를 변경할 가능성이 상
+* 비관적 잠금(pessimistic locking)
 	* 변경하고자 하는 레코드에 대해서
-	* 락을
-* 비관적 잠금
+	* 락을 먼저 획득하고
+	* 그 다음에 변경 작업을 처리하는 방식
+	* 일반적으로 높은 동시성 처리에는 비관적 잠금이 유리하다고 알려짐.  InnoDB 기본 채택 방식
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI4MjYwMzQ0OF19
+eyJoaXN0b3J5IjpbMTU1OTM3NTA5XX0=
 -->
