RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -14,7 +14,9 @@
 실제 쿼리 개발이나 튜닝에 큰 영향은 없다고 함.
 
 * 낙관적 잠금(optimistic locking)
-	* 각 트랜잭션이 같은 레코드를 변경할 가능성이 상
+	* 각 트랜잭션이 같은 레코드를 변경할 가능성이 상당히 희박할 것이다(낙관적)라고 가정
+	* 우선 변경 작업을 수행하고
+	* 마지막에 lock contention이 있었는지 확인하고, 다르면 ROLLBACK 처리
 * 비관적 잠금(pessimistic locking)
 	* 변경하고자 하는 레코드에 대해서
 	* 락을 먼저 획득하고
@@ -22,5 +24,5 @@
 	* 일반적으로 높은 동시성 처리에는 비관적 잠금이 유리하다고 알려짐.  InnoDB 기본 채택 방식
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1OTM3NTA5XX0=
+eyJoaXN0b3J5IjpbLTEzNDU4ODE4NTJdfQ==
 -->
