--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -24,10 +24,17 @@
 	* 일반적으로 높은 동시성 처리에는 비관적 잠금이 유리하다고 알려짐.  InnoDB 기본 채택 방식
 
 ### 4.4.2 InnoDB 잠금 종류
-InnoDB 스토리지 엔진은 레코드 기반의 잠금 기능을 제공함.
-잠금 정보가 상당히 작은 공간으로 관리되기 때문에 레코드 락이 페이지 락으로 또는 태이블 락으로 레벨업되는 경우(락 에스컬레이션)는 없다.
+* InnoDB 스토리지 엔진은 레코드 기반의 잠금 기능을 제공함.
+* 잠금 정보가 상당히 작은 공간으로 관리되기 때문에 레코드 락이 페이지 락으로 또는 태이블 락으로 레벨업되는 경우(락 에스컬레이션)는 없다.
 
-#### G
+#### Record Lock
+
+#### Gap Lock
+
+#### Next key Lock
+
+#### Auto 
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk2NjIxMTEyMV19
+eyJoaXN0b3J5IjpbLTE3ODA2MDI3ODNdfQ==
 -->
