--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -28,13 +28,17 @@
 * 잠금 정보가 상당히 작은 공간으로 관리되기 때문에 레코드 락이 페이지 락으로 또는 태이블 락으로 레벨업되는 경우(락 에스컬레이션)는 없다.
 
 #### Record Lock
-
+* 레코드 자체만을 잠그는 것
+* InnoDB 스토리지 엔진에서는 레코드 자체가 아닌 인덱스의 레코드를 잠근다.
+	* 인덱스가 없는 테이블도 내부적으로 자동 생성된 클러스터 인덱스를 이용해 잠금.
+	* 
 #### Gap Lock
 
 #### Next key Lock
 
-#### Auto 
+#### Auto Increment Lock
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3ODA2MDI3ODNdfQ==
+eyJoaXN0b3J5IjpbLTIwNTk2MTM4OTJdfQ==
 -->
