RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -31,7 +31,9 @@
 * 레코드 자체만을 잠그는 것
 * InnoDB 스토리지 엔진에서는 레코드 자체가 아닌 인덱스의 레코드를 잠근다.
 	* 인덱스가 없는 테이블도 내부적으로 자동 생성된 클러스터 인덱스를 이용해 잠금.
-	* 
+	* 인덱스에 거는것과 레코드에 거는 것은 상당히 크고 중요한 차이를 만든다.
+		* `이후 설명`
+* Primary Key, Unique index에 의한 변경 작업이 수행될 때 
 #### Gap Lock
 
 #### Next key Lock
@@ -40,5 +42,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNTk2MTM4OTJdfQ==
+eyJoaXN0b3J5IjpbMTU4NDMwODA5OV19
 -->
