--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -33,7 +33,8 @@
 	* 인덱스가 없는 테이블도 내부적으로 자동 생성된 클러스터 인덱스를 이용해 잠금.
 	* 인덱스에 거는것과 레코드에 거는 것은 상당히 크고 중요한 차이를 만든다.
 		* `이후 설명`
-* Primary Key, Unique index에 의한 변경 작업이 수행될 때 
+* Primary Key, Unique index에 의한 변경 작업이 수행될 때 이 락을 사용함.
+
 #### Gap Lock
 
 #### Next key Lock
@@ -42,5 +43,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4NDMwODA5OV19
+eyJoaXN0b3J5IjpbLTkzODEyODQ3MV19
 -->
