RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -41,7 +41,11 @@
 
 #### Auto Increment Lock
 
+### 4.4.3 인덱스와 잠금
 
+### 4.4.4 트랜잭션 격리 수준과 잠금
+
+### 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkzODEyODQ3MV19
+eyJoaXN0b3J5IjpbLTIxMjY1MTA1NzJdfQ==
 -->
