RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -45,7 +45,21 @@
 
 ### 4.4.4 트랜잭션 격리 수준과 잠금
 
-### 
+### 4.4.5 레코드 수준의 잠금 확인 및 해제
+
+## 4.5 MySQL의 격리 수준
+
+### 4.5.1 READ UNCOMMITTED
+
+### 4.5.2 READ COMMITTED
+
+### 4.5.3 REPEATABLE READ
+
+### 4.5.4 SERIALIZABLE
+
+### 4.5.5 REPEATABLE READ & READ COMMITTED 성능 비교
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMjY1MTA1NzJdfQ==
+eyJoaXN0b3J5IjpbMTU4MjQxOTIzMF19
 -->
