RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -1,18 +1,26 @@
-# 4. 트랜잭션과 잠금
+# 4. Transaction과 Lock
 
-## 
+## 4.1 트랜잭션
 
-## 4.4 InnoDB 스토리지 엔진의 잠금
+### 4.1.1 MySQL의 트랜잭션
 
-##### 잠금 정보 조회
+### 4.1.2 주의사항
+
+## 4.2 MySQL 엔진의 Lock
+
+#
+
+## 4.4 InnoDB 스토리지 엔진의 Lock
+
+##### Lock 정보 조회
 * MySQL 5.0 이하 : `SHOW ENGINE INNODB STATUS`
 * MySQL 5.1 이상 : 
 	* INFORMATION_SCHEMA
 		* INNODB_TRX : 트랜잭션 정보
-		* INNODB_LOCKS : 해당 잠금을 어느 트랜잭션이 가지고 있는지 조회
-		* INNODB_LOCK_WAITS : 잠금 대기 조회
+		* INNODB_LOCKS : 해당 Lock을 어느 트랜잭션이 가지고 있는지 조회
+		* INNODB_LOCK_WAITS : Lock 대기 조회
 
-### 4.4.1 InnoDB 잠금 방식
+### 4.4.1 InnoDB Lock 방식
 실제 쿼리 개발이나 튜닝에 큰 영향은 없다고 함.
 
 * 낙관적 잠금(optimistic locking)
@@ -25,7 +33,7 @@
 	* 그 다음에 변경 작업을 처리하는 방식
 	* 일반적으로 높은 동시성 처리에는 비관적 잠금이 유리하다고 알려짐.  InnoDB 기본 채택 방식
 
-### 4.4.2 InnoDB 잠금 종류
+### 4.4.2 InnoDB Lock 종류
 * InnoDB 스토리지 엔진은 레코드 기반의 잠금 기능을 제공함.
 * 잠금 정보가 상당히 작은 공간으로 관리되기 때문에 레코드 락이 페이지 락으로 또는 태이블 락으로 레벨업되는 경우(락 에스컬레이션)는 없다.
 
@@ -43,11 +51,11 @@
 
 #### Auto Increment Lock
 
-### 4.4.3 인덱스와 잠금
+### 4.4.3 인덱스와 Lock
 
-### 4.4.4 트랜잭션 격리 수준과 잠금
+### 4.4.4 트랜잭션 격리 수준과 Lock
 
-### 4.4.5 레코드 수준의 잠금 확인 및 해제
+### 4.4.5 레코드 수준의 Lock 확인 및 해제
 
 ## 4.5 MySQL의 격리 수준
 
@@ -63,5 +71,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzQzOTk1NjYyLDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbLTE0NDExNDM1ODYsMTU4MjQxOTIzMF19
 -->
