RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -8,7 +8,21 @@
 
 ## 4.2 MySQL 엔진의 Lock
 
-#
+### 4.2.1 Global Lock
+
+### 4.2.2 Table Lock
+
+### 4.2.3 User Lock
+
+### 4.2.4 Name Lock
+
+## 4.3 MyISAM, Memory 스토리지 엔진의 Lock
+
+### 4.3.1 Lock 획득
+
+### 4.3.2 Lock 튜닝
+
+### 4.3.3 테이블 수준의 Lock 확인 및 해제
 
 ## 4.4 InnoDB 스토리지 엔진의 Lock
 
@@ -71,5 +85,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NDExNDM1ODYsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTEzNDUyOTk5MywxNTgyNDE5MjMwXX0=
 -->
