RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -60,7 +60,10 @@
 * Primary Key, Unique index에 의한 변경 작업이 수행될 때 이 락을 사용함.
 
 #### Gap Lock
-
+* 레코드가 아닌 레코드와 바로 인접한 레코드 사이의 간격만을 잠그는 것
+* 레코드와 레코드 사이의 간격에 새로운 레코드가 생성(insert)되는 것을 제어하기 위함.
+* 개념일 뿐 자체적으로 사용되지 않음. Next key Lock의 일부로 사용됨.
+* 
 #### Next key Lock
 
 #### Auto Increment Lock
@@ -85,5 +88,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNDUyOTk5MywxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMTE2NTI3NDc3MCwxNTgyNDE5MjMwXX0=
 -->
