--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -61,10 +61,13 @@
 
 #### Gap Lock
 * 레코드가 아닌 레코드와 바로 인접한 레코드 사이의 간격만을 잠그는 것
-* 레코드와 레코드 사이의 간격에 새로운 레코드가 생성(insert)되는 것을 제어하기 위함.
+* <u>레코드와 레코드 사이의 간격에 새로운 레코드가 생성(insert)되는 것을 제어하기 위함.
 * 개념일 뿐 자체적으로 사용되지 않음. Next key Lock의 일부로 사용됨.
-* 
+
 #### Next key Lock
+* 레코드락와 갭락을 합쳐놓은 형태.
+* Statement 포맷의 바이너리 로그를 사용하는 MySQL 서버에서는 REPETEABLE READ 격리 수준을 사용해야 함.
+* 
 
 #### Auto Increment Lock
 
@@ -88,5 +91,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE2NTI3NDc3MCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbLTEyMjYyNjkxMTcsMTU4MjQxOTIzMF19
 -->
