RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -67,7 +67,7 @@
 #### Next key Lock
 * 레코드락와 갭락을 합쳐놓은 형태.
 * Statement 포맷의 바이너리 로그를 사용하는 MySQL 서버에서는 REPETEABLE READ 격리 수준을 사용해야 함.
-* 
+	* innodb_locks_unsafe_for_binlog 파라미터가 비활성화(0)되면 변경을 위해 검색하는 레코드에 nextkey lock이 걸린다.
 
 #### Auto Increment Lock
 
@@ -91,5 +91,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMjYyNjkxMTcsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
