--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -66,8 +66,11 @@
 
 #### Next key Lock
 * 레코드락와 갭락을 합쳐놓은 형태.
-* Statement 포맷의 바이너리 로그를 사용하는 MySQL 서버에서는 REPETEABLE READ 격리 수준을 사용해야 함.
+* 바이너리 로그를 Statement 포맷으로 사용하는 MySQL 서버에서는 REPETEABLE READ 격리 수준을 사용해야 함.
 	* innodb_locks_unsafe_for_binlog 파라미터가 비활성화(0)되면 변경을 위해 검색하는 레코드에 nextkey lock이 걸린다.
+	* 바이너리 로그에 기록되는 쿼리가 슬레이브에서 실행될 때 마스터가 만들어낸 결과와 동일한 결과를 만들어내도록 보장하는 것이 주 목적.
+	* 데드락이 발생하거나 다른 트랜잭션을 기다리게 만드는 일이 자주 발생함.
+* 바이너리 로그 포맷을 ROW 형태로 바꾼
 
 #### Auto Increment Lock
 
@@ -91,5 +94,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTg5MzY4OTgwMiwtMTAzNDIwNTU0NCwxNT
+gyNDE5MjMwXX0=
 -->
