RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -70,9 +70,12 @@
 	* innodb_locks_unsafe_for_binlog 파라미터가 비활성화(0)되면 변경을 위해 검색하는 레코드에 nextkey lock이 걸린다.
 	* 바이너리 로그에 기록되는 쿼리가 슬레이브에서 실행될 때 마스터가 만들어낸 결과와 동일한 결과를 만들어내도록 보장하는 것이 주 목적.
 	* 데드락이 발생하거나 다른 트랜잭션을 기다리게 만드는 일이 자주 발생함.
-* 바이너리 로그 포맷을 ROW 형태로 바꾼
+* 바이너리 로그 포맷을 ROW 형태로 바꾸는 것이 좋음.
+	* 아직 널리 사용되지 않아서 안정성 확인이 어려움.
+	* 로그파일의 크기가 상당히 커질 가능성이 많다.
 
 #### Auto Increment Lock
+자동 증가 
 
 ### 4.4.3 인덱스와 Lock
 
@@ -94,6 +97,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg5MzY4OTgwMiwtMTAzNDIwNTU0NCwxNT
+eyJoaXN0b3J5IjpbMjA1ODI0MjU2NywtMTAzNDIwNTU0NCwxNT
 gyNDE5MjMwXX0=
 -->
