RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -75,7 +75,10 @@
 	* 로그파일의 크기가 상당히 커질 가능성이 많다.
 
 #### Auto Increment Lock
-자동 증가 
+* AUTO_INCREMENT 컬럼 속성
+	* 동시에 여러 레코드가 insert 되는 경우, 중복되지 않고 저장된 순서대로 증가하는 일련번호 값을 제공
+* 테이블 수준 잠금 제공
+* 
 
 ### 4.4.3 인덱스와 Lock
 
@@ -97,6 +100,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA1ODI0MjU2NywtMTAzNDIwNTU0NCwxNT
-gyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbLTEwMTQ3ODA1OTUsMjA1ODI0MjU2NywtMT
+AzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
 -->
