RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -77,8 +77,9 @@
 #### Auto Increment Lock
 * AUTO_INCREMENT 컬럼 속성
 	* 동시에 여러 레코드가 insert 되는 경우, 중복되지 않고 저장된 순서대로 증가하는 일련번호 값을 제공
-* 테이블 수준 잠금 제공
-* 
+*  테이블 수준의 잠금 제공
+	* insert, replace 쿼리에서만 필요함. update, delete는 사용하지 않음.
+	* 값을 가져오는 순간에만 lock을 잡았다가 즉시 해제한다.
 
 ### 4.4.3 인덱스와 Lock
 
@@ -100,6 +101,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTQ3ODA1OTUsMjA1ODI0MjU2NywtMT
-AzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMzMzOTYyNDg2LDIwNTgyNDI1NjcsLTEwMz
+QyMDU1NDQsMTU4MjQxOTIzMF19
 -->
