RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -80,6 +80,10 @@
 *  테이블 수준의 잠금 제공
 	* insert, replace 쿼리에서만 필요함. update, delete는 사용하지 않음.
 	* 값을 가져오는 순간에만 lock을 잡았다가 즉시 해제한다.
+	* 명시적인 획득 방법은 없음.
+	* 아주 짧은 시간만 락을 사용하기 때문에 대부분의 경우 문제되지 않음.
+	*  MySQL 5.1 이상은 innodb_autoinc_lock_mode 값에 의해 작동방식을 변경할 수 있음.
+##### innodb_autoinc lock mode == 0	
 
 ### 4.4.3 인덱스와 Lock
 
@@ -101,6 +105,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzMzOTYyNDg2LDIwNTgyNDI1NjcsLTEwMz
-QyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTU2MDcxNDE3OSwyMDU4MjQyNTY3LC0xMD
+M0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
