RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -83,7 +83,11 @@
 	* 명시적인 획득 방법은 없음.
 	* 아주 짧은 시간만 락을 사용하기 때문에 대부분의 경우 문제되지 않음.
 	*  MySQL 5.1 이상은 innodb_autoinc_lock_mode 값에 의해 작동방식을 변경할 수 있음.
-##### innodb_autoinc lock mode == 0	
+##### innodb_autoinc_lock_mode = 0
+* 모든 insert 문장에서 락을 사용한다.
+##### innodb_autoinc_lock_mode = 1
+* 
+
 
 ### 4.4.3 인덱스와 Lock
 
@@ -105,6 +109,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU2MDcxNDE3OSwyMDU4MjQyNTY3LC0xMD
+eyJoaXN0b3J5IjpbMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMD
 M0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
