--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -86,7 +86,7 @@
 ##### innodb_autoinc_lock_mode = 0
 * 모든 insert 문장에서 락을 사용한다.
 ##### innodb_autoinc_lock_mode = 1
-* 
+* insert되는 레코드 건수를 정확히 예측 가능하다면, 
 
 
 ### 4.4.3 인덱스와 Lock
@@ -109,6 +109,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMD
-M0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbLTE2OTMxNTAyMDQsMjA5MDYzNDcxNSwyMD
+U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
