--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -86,7 +86,10 @@
 ##### innodb_autoinc_lock_mode = 0
 * 모든 insert 문장에서 락을 사용한다.
 ##### innodb_autoinc_lock_mode = 1
-* insert되는 레코드 건수를 정확히 예측 가능하다면, 
+* insert되는 레코드 건수를 정확히 예측 가능하다면, Latch를 사용한다.
+	* Latch 설명 : https://tawool.tistory.com/237
+	* 아주 짧은 시간 동안만 잠금을 걸고 필요한 자동 증가값을 가져오면 즉시 잠금이 해제됨.
+* insert ... select와 같이 쿼리 실행 전에는 예측할 수 없을 경우에는 Auto Increment Lock을 사용한다.
 
 
 ### 4.4.3 인덱스와 Lock
@@ -109,6 +112,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2OTMxNTAyMDQsMjA5MDYzNDcxNSwyMD
-U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbMTUyMjMzMTM3NSwyMDkwNjM0NzE1LDIwNT
+gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
