RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -84,12 +84,15 @@
 	* 아주 짧은 시간만 락을 사용하기 때문에 대부분의 경우 문제되지 않음.
 	*  MySQL 5.1 이상은 innodb_autoinc_lock_mode 값에 의해 작동방식을 변경할 수 있음.
 ##### innodb_autoinc_lock_mode = 0
-* 모든 insert 문장에서 락을 사용한다.
+* 모든 insert 문장에서 `Auto Increment Lock`을 사용한다.
 ##### innodb_autoinc_lock_mode = 1
 * insert되는 레코드 건수를 정확히 예측 가능하다면, Latch를 사용한다.
 	* Latch 설명 : https://tawool.tistory.com/237
 	* 아주 짧은 시간 동안만 잠금을 걸고 필요한 자동 증가값을 가져오면 즉시 잠금이 해제됨.
-* insert ... select와 같이 쿼리 실행 전에는 예측할 수 없을 경우에는 Auto Increment Lock을 사용한다.
+* insert ... select와 같이 쿼리 실행 전에는 예측할 수 없을 경우에는 `Auto Increment Lock`을 사용한다.
+	* insert 문장이 완료되기 전까지 자동 증가 락은 해제되지 않아서 다른 커넥션에서 insert를 실행하지 못하고 대기하게 된다.
+		* 응?? 위에서는 값을 가져오고 바로 해제된다며..
+* 
 
 
 ### 4.4.3 인덱스와 Lock
@@ -112,6 +115,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUyMjMzMTM3NSwyMDkwNjM0NzE1LDIwNT
-gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTExMTg3NjMwMjMsMjA5MDYzNDcxNSwyMD
+U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
