--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -92,7 +92,9 @@
 * insert ... select와 같이 쿼리 실행 전에는 예측할 수 없을 경우에는 `Auto Increment Lock`을 사용한다.
 	* insert 문장이 완료되기 전까지 자동 증가 락은 해제되지 않아서 다른 커넥션에서 insert를 실행하지 못하고 대기하게 된다.
 		* 응?? 위에서는 값을 가져오고 바로 해제된다며..
-* 
+* 대량 insert가 수행되면 한번에 여러 개의 자동 증가 값을 한번에 할당받아서 insert되는 레코드에 사용한다.
+	* 자동 증가한 뒤에 트랜잭션이 실패할 경우에는 할당받았던 증가 값은 폐기된다.
+	* 연속ㅈ
 
 
 ### 4.4.3 인덱스와 Lock
@@ -115,6 +117,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMTg3NjMwMjMsMjA5MDYzNDcxNSwyMD
+eyJoaXN0b3J5IjpbLTExNTg0NDU4ODYsMjA5MDYzNDcxNSwyMD
 U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
