--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -93,8 +93,11 @@
 	* insert 문장이 완료되기 전까지 자동 증가 락은 해제되지 않아서 다른 커넥션에서 insert를 실행하지 못하고 대기하게 된다.
 		* 응?? 위에서는 값을 가져오고 바로 해제된다며..
 * 대량 insert가 수행되면 한번에 여러 개의 자동 증가 값을 한번에 할당받아서 insert되는 레코드에 사용한다.
-	* 자동 증가한 뒤에 트랜잭션이 실패할 경우에는 할당받았던 증가 값은 폐기된다.
-	* 연속ㅈ
+	* 자동 증가한 뒤에 트랜잭션이 실패할 경우에는 할당받았던 증가 값은 폐기된다. 즉, 연속되지 않고 누락된 값이 발생 가능하다.
+* 이 설정 값에서는 최소한 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지게 된다.
+
+##### innodb_autoinc_lock_mode = 2
+
 
 
 ### 4.4.3 인덱스와 Lock
@@ -117,6 +120,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNTg0NDU4ODYsMjA5MDYzNDcxNSwyMD
-U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbODg1OTM4NjgwLDIwOTA2MzQ3MTUsMjA1OD
+I0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
 -->
