--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -94,10 +94,11 @@
 		* 응?? 위에서는 값을 가져오고 바로 해제된다며..
 * 대량 insert가 수행되면 한번에 여러 개의 자동 증가 값을 한번에 할당받아서 insert되는 레코드에 사용한다.
 	* 자동 증가한 뒤에 트랜잭션이 실패할 경우에는 할당받았던 증가 값은 폐기된다. 즉, 연속되지 않고 누락된 값이 발생 가능하다.
-* 이 설정 값에서는 최소한 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지게 된다.
+* 이 설정 값에서는 최소한 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지게 된다. con
 
 ##### innodb_autoinc_lock_mode = 2
-
+* 절대 `Auto Increment Lock`을 사용하지 않고 항상 Latch를 사용한다.
+* 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지는 것을 보장하지 않는다. interleaved mode
 
 
 ### 4.4.3 인덱스와 Lock
@@ -120,6 +121,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODg1OTM4NjgwLDIwOTA2MzQ3MTUsMjA1OD
-I0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbLTI5NjUwMjIwOCwyMDkwNjM0NzE1LDIwNT
+gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
