--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -89,16 +89,17 @@
 * insert되는 레코드 건수를 정확히 예측 가능하다면, Latch를 사용한다.
 	* Latch 설명 : https://tawool.tistory.com/237
 	* 아주 짧은 시간 동안만 잠금을 걸고 필요한 자동 증가값을 가져오면 즉시 잠금이 해제됨.
-* insert ... select와 같이 쿼리 실행 전에는 예측할 수 없을 경우에는 `Auto Increment Lock`을 사용한다.
-	* insert 문장이 완료되기 전까지 자동 증가 락은 해제되지 않아서 다른 커넥션에서 insert를 실행하지 못하고 대기하게 된다.
-		* 응?? 위에서는 값을 가져오고 바로 해제된다며..
+* `insert ... select`와 같이 쿼리 실행 전에는 예측할 수 없을 경우에는 `Auto Increment Lock`을 사용한다.
+	* 이 경우, insert 문장이 완료되기 전까지 자동 증가 락은 해제되지 않아서 다른 커넥션에서 insert를 실행하지 못하고 대기하게 된다.
+	
 * 대량 insert가 수행되면 한번에 여러 개의 자동 증가 값을 한번에 할당받아서 insert되는 레코드에 사용한다.
 	* 자동 증가한 뒤에 트랜잭션이 실패할 경우에는 할당받았던 증가 값은 폐기된다. 즉, 연속되지 않고 누락된 값이 발생 가능하다.
-* 이 설정 값에서는 최소한 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지게 된다. con
+* 이 설정 값에서는 최소한 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지게 된다. `consecutive mode`
 
 ##### innodb_autoinc_lock_mode = 2
 * 절대 `Auto Increment Lock`을 사용하지 않고 항상 Latch를 사용한다.
-* 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지는 것을 보장하지 않는다. interleaved mode
+* 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지는 것을 보장하지 않는다. `interleaved mode`
+* insert ... select 문장에서도
 
 
 ### 4.4.3 인덱스와 Lock
@@ -121,6 +122,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5NjUwMjIwOCwyMDkwNjM0NzE1LDIwNT
+eyJoaXN0b3J5IjpbLTIwMjE5NzE3NSwyMDkwNjM0NzE1LDIwNT
 gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
