--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -99,10 +99,12 @@
 * 절대 `Auto Increment Lock`을 사용하지 않고 항상 Latch를 사용한다.
 * 하나의 insert 문장으로 추가되는 레코드는 연속된 값을 가지는 것을 보장하지 않는다. `interleaved mode`
 * `insert ... select` 문장에서도 다른 커넥션에서 insert를 수행할 수 있어서 동시 처리 성능이 높아진다.
-* 유니크한 값이 생성된다는 것만 보장하며, 복제를 사용하는 경우 마스터와 슬레이븡
+* 유니크한 값이 생성된다는 것만 보장하며, 복제를 사용하는 경우 마스터와 슬레이브의 자동 증가 값이 달라질 가능성이 있어서 주의가 필요하다.
 
+더 자세한 내용은 MySQL 매뉴얼의 “Configurable InnoDB Auto-Increment Locking"을 참조
 
 ### 4.4.3 인덱스와 Lock
+
 
 ### 4.4.4 트랜잭션 격리 수준과 Lock
 
@@ -122,6 +124,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1NDM3NzQzNSwyMDkwNjM0NzE1LDIwNT
-gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTEzMTkxMTUxNzAsMjA5MDYzNDcxNSwyMD
+U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
