RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -104,7 +104,10 @@
 더 자세한 내용은 MySQL 매뉴얼의 “Configurable InnoDB Auto-Increment Locking"을 참조
 
 ### 4.4.3 인덱스와 Lock
-
+* InnoDB의 레코드락은 레코드를 잠그는 것이 아니라 인덱스를 잠그는 방식이다.
+* 변경해야 할 레코드를 찾기 위해 검색한 인덱스의 레코드를 모두 잠가야 한다.
+	* 대체 가능한 인덱스가 여러개 존재한다면?
+* 
 
 ### 4.4.4 트랜잭션 격리 수준과 Lock
 
@@ -124,6 +127,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTkxMTUxNzAsMjA5MDYzNDcxNSwyMD
-U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbNDgzNzE5NTMsMjA5MDYzNDcxNSwyMDU4Mj
+QyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
