--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -107,7 +107,13 @@
 * InnoDB의 레코드락은 레코드를 잠그는 것이 아니라 인덱스를 잠그는 방식이다.
 * 변경해야 할 레코드를 찾기 위해 검색한 인덱스의 레코드를 모두 잠가야 한다.
 	* 대체 가능한 인덱스가 여러개 존재한다면?
-* 
+```sql
+SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi';
+> 253
+SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi' AND last_name = 'Klassen';
+> 1
+UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name = 'Klassen';
+```
 
 ### 4.4.4 트랜잭션 격리 수준과 Lock
 
@@ -127,6 +133,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDgzNzE5NTMsMjA5MDYzNDcxNSwyMDU4Mj
-QyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1OD
+I0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
 -->
