RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -108,6 +108,7 @@
 * 변경해야 할 레코드를 찾기 위해 검색한 인덱스의 레코드를 모두 잠가야 한다.
 	* 대체 가능한 인덱스가 여러개 존재한다면?
 ```sql
+ind
 SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi';
 > 253
 SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi' AND last_name = 'Klassen';
@@ -133,6 +134,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1OD
-I0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbLTkxMzU5NDM2Niw0NDkxOTM3NjksMjA5MD
+YzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTky
+MzBdfQ==
 -->
