RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -108,13 +108,17 @@
 * 변경해야 할 레코드를 찾기 위해 검색한 인덱스의 레코드를 모두 잠가야 한다.
 	* 대체 가능한 인덱스가 여러개 존재한다면?
 ```sql
-ind
+-- index는 first_name만 존재한다.
 SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi';
 > 253
 SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi' AND last_name = 'Klassen';
 > 1
 UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name = 'Klassen';
 ```
+* 1건의 업데이트 실행.
+	* index는 first_name 뿐이므로, 253건의 레코드가 모두 잠긴다.
+	* 
+	* 
 
 ### 4.4.4 트랜잭션 격리 수준과 Lock
 
@@ -134,7 +138,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkxMzU5NDM2Niw0NDkxOTM3NjksMjA5MD
-YzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTky
-MzBdfQ==
+eyJoaXN0b3J5IjpbLTE1NDE5MzU4OTgsNDQ5MTkzNzY5LDIwOT
+A2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5
+MjMwXX0=
 -->
