RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -108,6 +108,7 @@
 * 변경해야 할 레코드를 찾기 위해 검색한 인덱스의 레코드를 모두 잠가야 한다.
 	* 대체 가능한 인덱스가 여러개 존재한다면?
 ```sql
+-- 레코드는 총 30만건이다.
 -- index는 first_name만 존재한다.
 SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi';
 > 253
@@ -117,7 +118,9 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 ```
 * 1건의 업데이트 실행.
 	* index는 first_name 뿐이므로, 253건의 레코드가 모두 잠긴다.
-	* 
+	* UPDATE 문장을 위해 적절히 인덱스가 준비돼있지 않다면 동시성이 상당히 떨어진다.
+* 만약 인덱스가 하나도 없다면?
+	* 테이블을 풀 스캔하면서 UPDATE 작업이 처리됨. 30만건
 	* 
 
 ### 4.4.4 트랜잭션 격리 수준과 Lock
@@ -138,7 +141,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NDE5MzU4OTgsNDQ5MTkzNzY5LDIwOT
+eyJoaXN0b3J5IjpbLTEyMzg1OTM1MjEsNDQ5MTkzNzY5LDIwOT
 A2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5
 MjMwXX0=
 -->
