RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -120,8 +120,9 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 	* index는 first_name 뿐이므로, 253건의 레코드가 모두 잠긴다.
 	* UPDATE 문장을 위해 적절히 인덱스가 준비돼있지 않다면 동시성이 상당히 떨어진다.
 * 만약 인덱스가 하나도 없다면?
-	* 테이블을 풀 스캔하면서 UPDATE 작업이 처리됨. 30만건
-	* 
+	* 테이블을 풀 스캔하면서 UPDATE 작업이 처리됨.
+	* 30만건의 레코드를 모두 잠근다.
+	* 인덱스 설계가 매우 중요한 이유.
 
 ### 4.4.4 트랜잭션 격리 수준과 Lock
 
@@ -141,7 +142,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMzg1OTM1MjEsNDQ5MTkzNzY5LDIwOT
-A2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5
-MjMwXX0=
+eyJoaXN0b3J5IjpbLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNj
+M0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIz
+MF19
 -->
