RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -125,6 +125,8 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 	* 인덱스 설계가 매우 중요한 이유.
 
 ### 4.4.4 트랜잭션 격리 수준과 Lock
+* 불필요한 레코드 잠금 현상은 InnoDB의 `Next key Lock` 때문에 발생한다.
+
 
 ### 4.4.5 레코드 수준의 Lock 확인 및 해제
 
@@ -142,7 +144,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNj
-M0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIz
-MF19
+eyJoaXN0b3J5IjpbMTY5NDg4Nzg4MiwtNjE2MjExOTksNDQ5MT
+kzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0
+NCwxNTgyNDE5MjMwXX0=
 -->
