RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -128,7 +128,12 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 * 불필요한 레코드 잠금 현상은 InnoDB의 `Next key Lock` 때문에 발생한다.
 * 이게 필요한 주 원인은 복제를 위한 바이너리 로그 때문이다.
 	* ROW Based Binary Log를 사용하거나, 바이너리 로그를 사용하지 않는다면 이 락의 사용을 대폭 줄일 수 있다.
-	* REA
+
+	| 설정 조합 |
+	|--|
+	| * READ-COMMITTED 수준으로 설정한다. |
+	| |
+
 
 ### 4.4.5 레코드 수준의 Lock 확인 및 해제
 
@@ -146,7 +151,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU0NjIwODkwNiwtNjE2MjExOTksNDQ5MT
+eyJoaXN0b3J5IjpbMjAwNjQ1MDA0MiwtNjE2MjExOTksNDQ5MT
 kzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0
 NCwxNTgyNDE5MjMwXX0=
 -->
