RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -131,8 +131,8 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 	| 설정 조합 |
 	|--|
-	| * READ-COMMITTED 수준으로 설정한다. |
-	| |
+	| - READ-COMMITTED 수준으로 설정한다.<br>- 바이너리 로그 비활성화 |
+	| - READ-COMMITTED 수준으로 설정한다.<br>- 레코드 기반 바이너리 로그 사용<br> - innodb_locks_unsafe_for_binlog=1|
 
 
 ### 4.4.5 레코드 수준의 Lock 확인 및 해제
@@ -151,7 +151,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAwNjQ1MDA0MiwtNjE2MjExOTksNDQ5MT
+eyJoaXN0b3J5IjpbLTE1MDg3NDc0MSwtNjE2MjExOTksNDQ5MT
 kzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0
 NCwxNTgyNDE5MjMwXX0=
 -->
