--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -128,11 +128,12 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 * 불필요한 레코드 잠금 현상은 InnoDB의 `Next key Lock` 때문에 발생한다.
 * 이게 필요한 주 원인은 복제를 위한 바이너리 로그 때문이다.
 	* ROW Based Binary Log를 사용하거나, 바이너리 로그를 사용하지 않는다면 이 락의 사용을 대폭 줄일 수 있다.
+	* 아래 설정 조합으로 `Next key Lock` 을 없앨 수 있으나, Unique Key, 외래키에 대한 Gap Lock은 없어지지 않는다.
 
 	| 설정 조합 |
 	|--|
 	| - READ-COMMITTED 수준으로 설정한다.<br>- 바이너리 로그 비활성화 |
-	| - READ-COMMITTED 수준으로 설정한다.<br>- 레코드 기반 바이너리 로그 사용<br> - innodb_locks_unsafe_for_binlog=1|
+	| - READ-COMMITTED 수준으로 설정한다.<br>- 레코드 기반 바이너리 로그 사용<br> - innodb_locks_unsafe_for_binlog=1 |
 
 
 ### 4.4.5 레코드 수준의 Lock 확인 및 해제
@@ -151,7 +152,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MDg3NDc0MSwtNjE2MjExOTksNDQ5MT
-kzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0
-NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbNTMwMzc4Nzk1LC02MTYyMTE5OSw0NDkxOT
+M3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0
+LDE1ODI0MTkyMzBdfQ==
 -->
