--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -135,6 +135,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 	| - READ-COMMITTED 수준으로 설정한다.<br>- 바이너리 로그 비활성화 |
 	| - READ-COMMITTED 수준으로 설정한다.<br>- 레코드 기반 바이너리 로그 사용<br> - innodb_locks_unsafe_for_binlog=1 |
 
+* UPDATE 문장 처리 시 일치하는 레코드를 인덱스를 이용해 검색 할 때, 우선 인덱스만 비교해서 일치하는 레코드에 대해 배타적 잠금 수행, 그 후 나머지 조건을 비교해서 일치하지 않는 레코드는 즉시 잠그
 
 ### 4.4.5 레코드 수준의 Lock 확인 및 해제
 
@@ -152,7 +153,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTMwMzc4Nzk1LC02MTYyMTE5OSw0NDkxOT
-M3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0
-LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbLTIyODczNjIzNCwtNjE2MjExOTksNDQ5MT
+kzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0
+NCwxNTgyNDE5MjMwXX0=
 -->
