RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -135,11 +135,13 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 	| - READ-COMMITTED 수준으로 설정한다.<br>- 바이너리 로그 비활성화 |
 	| - READ-COMMITTED 수준으로 설정한다.<br>- 레코드 기반 바이너리 로그 사용<br> - innodb_locks_unsafe_for_binlog=1 |
 
-* UPDATE 문장 처리 시 일치하는 레코드를 인덱스를 이용해 검색 할 때,
+* 설정 후 UPDATE 문장 처리 시 일치하는 레코드를 인덱스를 이용해 검색 할 때,
 	* 우선 인덱스만 비교해서 일치하는 레코드에 대해 배타적 잠금 수행,
 	* 그 후 나머지 조건을 비교해서 일치하지 않는 레코드는 즉시 잠금을 해제함.
 
 ### 4.4.5 레코드 수준의 Lock 확인 및 해제
+* InnoDB 스토리지 엔진의 테이블 레코드 수준 잠금
+
 
 ## 4.5 MySQL의 격리 수준
 
@@ -155,7 +157,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1NTg5Mzk5OCwtNjE2MjExOTksNDQ5MT
-kzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0
-NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMjAxNjUxOTc5LC02MTYyMTE5OSw0NDkxOT
+M3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0
+LDE1ODI0MTkyMzBdfQ==
 -->
