RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -141,7 +141,10 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 ### 4.4.5 레코드 수준의 Lock 확인 및 해제
 * InnoDB 스토리지 엔진의 테이블 레코드 수준 잠금
-
+	* 더 복잡, 오랜시간 잠겨진 상태로 남아있어도 잘 발견되지 않음.
+* 테이블 수준 잠금
+	* 단순, 문제의 원인이 쉽게 발견되고 해결될 수 있음.
+* MySQL 5.0 이하 ㅈ
 
 ## 4.5 MySQL의 격리 수준
 
@@ -157,7 +160,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAxNjUxOTc5LC02MTYyMTE5OSw0NDkxOT
-M3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0
-LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbLTE3MDY1MzIxMjgsLTYxNjIxMTk5LDQ0OT
+E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
+NDQsMTU4MjQxOTIzMF19
 -->
