RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -144,7 +144,11 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 	* 더 복잡, 오랜시간 잠겨진 상태로 남아있어도 잘 발견되지 않음.
 * 테이블 수준 잠금
 	* 단순, 문제의 원인이 쉽게 발견되고 해결될 수 있음.
-* MySQL 5.0 이하 ㅈ
+#### MySQL 5.0 이하 잠금 확인 및 해제
+
+
+#### MySQL 5.1 이하 잠금 확인 및 해제
+
 
 ## 4.5 MySQL의 격리 수준
 
@@ -160,7 +164,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MDY1MzIxMjgsLTYxNjIxMTk5LDQ0OT
-E5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1
-NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTMzMjY2MTUxMCwtNjE2MjExOTksNDQ5MT
+kzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0
+NCwxNTgyNDE5MjMwXX0=
 -->
