RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -145,7 +145,11 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 * 테이블 수준 잠금
 	* 단순, 문제의 원인이 쉽게 발견되고 해결될 수 있음.
 #### MySQL 5.0 이하 잠금 확인 및 해제
-```uml
+```
+1 : BEGIN
+1 : UPDATE employees SET birth_date = NOW() WHERE emp_no = 100001;
+2 : UPDATE employees SET hire_date = NOW() WHERE emp_no = 100001;
+3 : UPDATE employees SET birth_date = NOW(), hire_date = NOE WHERE emp_no = 100001;
 ```
 
 #### MySQL 5.1 이하 잠금 확인 및 해제
@@ -165,7 +169,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNj
-E2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2
-NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbNTY1NzU2NjI0LC0yMTQxNDE3MTI2LC0zMz
+I2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1
+LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
