RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -149,8 +149,11 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 1 : BEGIN
 1 : UPDATE employees SET birth_date = NOW() WHERE emp_no = 100001;
 2 : UPDATE employees SET hire_date = NOW() WHERE emp_no = 100001;
-3 : UPDATE employees SET birth_date = NOW(), hire_date = NOE WHERE emp_no = 100001;
+3 : UPDATE employees SET birth_date = NOW(), hire_date = NOW() WHERE emp_no = 100001;
 ```
+* 1번이 업데이트 하면서 락 획득, 2/3번은 락 대기 상태.
+* SHOW PROCESSLIST
+
 
 #### MySQL 5.1 이하 잠금 확인 및 해제
 
@@ -169,7 +172,8 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTY1NzU2NjI0LC0yMTQxNDE3MTI2LC0zMz
-I2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1
-LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTI4NzAzMDM5MiwtMjE0MTQxNzEyNiwtMz
+MyNjYxNTEwLC02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcx
+NSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ
+==
 -->
