--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -154,7 +154,10 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 * 1번이 업데이트 하면서 락 획득, 2/3번은 락 대기 상태.
 * SHOW PROCESSLIST
 	* 락 대기중인 프로세스의 State는 Updating으로 표시됨.
-	* 느낌 상으로 Updating인데 2
+	* 느낌 상으로 Updating인데 2~3초 실행 중이라면 아.. 락 대기중이구나 라고 알 수 있음.
+		* Primary key나 Index를 이용하는 경우에 한정.
+		* full scan 쿼리는 락 대기가 아니더라도 그 이상의 시간이 소요될 수 있음.
+* 
 
 
 #### MySQL 5.1 이하 잠금 확인 및 해제
@@ -174,7 +177,8 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDI2NTYxNDUwLC0yMTQxNDE3MTI2LC0zMz
-I2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1
-LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbMTc1OTM4OTExOSwtMjE0MTQxNzEyNiwtMz
+MyNjYxNTEwLC02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcx
+NSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ
+==
 -->
