RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -159,7 +159,10 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 		* full scan 쿼리는 락 대기가 아니더라도 그 이상의 시간이 소요될 수 있음.
 * `SHOW ENGINE INNODB STATUS`
 	* `TRANSACTIONS` 섹션
-	* 레코드를 오랫동
+	* 레코드를 오랫동안 잠그고 있는 프로세스가 있는지 여부를 확인
+		* 트랜잭션이 오랜 시간동안 실행되고 있는 줄을 찾는다.
+		* 상태가 ACTIVE, 그 뒤의 시간이 큰 값을 가지는 트랜잭션을 찾는다.
+	* 
 
 
 #### MySQL 5.1 이하 잠금 확인 및 해제
@@ -179,7 +182,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcwNDk2MDUzMCwtMjE0MTQxNzEyNiwtMz
+eyJoaXN0b3J5IjpbMTA2OTU5NDQ3MiwtMjE0MTQxNzEyNiwtMz
 MyNjYxNTEwLC02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcx
 NSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ
 ==
