--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -162,10 +162,9 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 	* 레코드를 오랫동안 잠그고 있는 프로세스가 있는지 여부를 확인
 		* 트랜잭션이 오랜 시간동안 실행되고 있는 줄을 찾는다.
 		* 상태가 ACTIVE, 그 뒤의 시간이 큰 값을 가지는 트랜잭션을 찾는다.
-	*  쿼
+	*  <u>쿼리에 필요한 Lock이 무엇인지 예측해야 한다. -> 실행계획
 
-
-#### MySQL 5.1 이하 잠금 확인 및 해제
+#### MySQL 5.1 이 잠금 확인 및 해제
 
 
 ## 4.5 MySQL의 격리 수준
@@ -182,8 +181,8 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMDUyMzk0NzYsMTA2Njg5NTQyNiwtMj
-E0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0NDkxOTM3
-NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LD
-E1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbLTM1OTIxMjk2MSwxMDY2ODk1NDI2LC0yMT
+QxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2
+OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMT
+U4MjQxOTIzMF19
 -->
