RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -110,11 +110,11 @@
 ```sql
 -- 레코드는 총 30만건이다.
 -- index는 first_name만 존재한다.
-SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi';
-> 253
-SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi' AND last_name = 'Klassen';
-> 1
-UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name = 'Klassen';
+> SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi';
+253
+> SELECT COUNT(*) FROM employees WHERE first_name = 'Georgi' AND last_name = 'Klassen';
+1
+> UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name = 'Klassen';
 ```
 * 1건의 업데이트 실행.
 	* index는 first_name 뿐이므로, 253건의 레코드가 모두 잠긴다.
@@ -164,8 +164,11 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 		* 상태가 ACTIVE, 그 뒤의 시간이 큰 값을 가지는 트랜잭션을 찾는다.
 	*  <u>쿼리에 필요한 Lock이 무엇인지 예측해야 한다. -> 실행계획
 
-#### MySQL 5.1 이 잠금 확인 및 해제
+#### MySQL 5.1 이상 잠금 확인 및 해제
+```sql
+> SELECT * FROM information_schema.innodb_locks;
 
+```
 
 ## 4.5 MySQL의 격리 수준
 
@@ -181,7 +184,7 @@ UPDATE employees SET hire_date = NOW() WHERE first_name = 'Georgi' AND last_name
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM1OTIxMjk2MSwxMDY2ODk1NDI2LC0yMT
+eyJoaXN0b3J5IjpbMTY4NTY3Mjg5NCwxMDY2ODk1NDI2LC0yMT
 QxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2
 OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMT
 U4MjQxOTIzMF19
