RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -167,7 +167,9 @@
 #### MySQL 5.1 이상 잠금 확인 및 해제
 ```sql
 > SELECT * FROM information_schema.innodb_locks;
-
+lock_mode(X), lock_type(RECORD), lock_table(tablename), lock_index('PRIMARY'),
+lock_space(78), lock_page(298), lock_rec(25), lock_data(100001)
+...
 ```
 
 ## 4.5 MySQL의 격리 수준
@@ -184,8 +186,8 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY4NTY3Mjg5NCwxMDY2ODk1NDI2LC0yMT
-QxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2
-OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMT
-U4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTExOTI3NDI1NDcsMTA2Njg5NTQyNiwtMj
+E0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0NDkxOTM3
+NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LD
+E1ODI0MTkyMzBdfQ==
 -->
