RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -167,9 +167,13 @@
 #### MySQL 5.1 이상 잠금 확인 및 해제
 ```sql
 > SELECT * FROM information_schema.innodb_locks;
+lock_id(34A7:78:298:25), lock_trx_id(34A7),
 lock_mode(X), lock_type(RECORD), lock_table(tablename), lock_index('PRIMARY'),
 lock_space(78), lock_page(298), lock_rec(25), lock_data(100001)
 ...
+
+> SELECT * FROM information_schema.innodb_trx;
+trx_id(34A7), trx_state(LOCK_WAIT), trx_started(time..), trx_query(UPDATE ...)
 ```
 
 ## 4.5 MySQL의 격리 수준
@@ -186,7 +190,7 @@ lock_space(78), lock_page(298), lock_rec(25), lock_data(100001)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExOTI3NDI1NDcsMTA2Njg5NTQyNiwtMj
+eyJoaXN0b3J5IjpbLTIwMzI3ODU3MjIsMTA2Njg5NTQyNiwtMj
 E0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0NDkxOTM3
 NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LD
 E1ODI0MTkyMzBdfQ==
