RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -165,6 +165,8 @@
 	*  <u>쿼리에 필요한 Lock이 무엇인지 예측해야 한다. -> 실행계획
 
 #### MySQL 5.1 이상 잠금 확인 및 해제
+* information_schema.innodb_locks : 어떤 잠금이 존재하는지 관리
+* information_schema.innodb_trx : 어떤 트랜잭션이 어떤 잠금을 기다리고 있는지 관리
 ```sql
 > SELECT * FROM information_schema.innodb_locks;
 lock_id(34A7:78:298:25), lock_trx_id(34A7),
@@ -175,6 +177,8 @@ lock_space(78), lock_page(298), lock_rec(25), lock_data(100001)
 > SELECT * FROM information_schema.innodb_trx;
 trx_id(34A7), trx_state(LOCK_WAIT), trx_started(time..), trx_query(UPDATE ...)
 ```
+
+* 어떠
 
 ## 4.5 MySQL의 격리 수준
 
@@ -190,8 +194,8 @@ trx_id(34A7), trx_state(LOCK_WAIT), trx_started(time..), trx_query(UPDATE ...)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMzI3ODU3MjIsMTA2Njg5NTQyNiwtMj
-E0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5OSw0NDkxOTM3
-NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMDM0MjA1NTQ0LD
-E1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbNzI1MzY2NjY3LDEwNjY4OTU0MjYsLTIxND
+E0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksNDQ5MTkzNzY5
+LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0NCwxNT
+gyNDE5MjMwXX0=
 -->
