RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -167,6 +167,7 @@
 #### MySQL 5.1 이상 잠금 확인 및 해제
 * information_schema.innodb_locks : 어떤 잠금이 존재하는지 관리
 * information_schema.innodb_trx : 어떤 트랜잭션이 어떤 잠금을 기다리고 있는지 관리
+* information schema.innodb_lock_waits : 잠금에 의한 프로세스 간의 의존 관계를 관리
 ```sql
 > SELECT * FROM information_schema.innodb_locks;
 lock_id(34A7:78:298:25), lock_trx_id(34A7),
@@ -178,7 +179,12 @@ lock_space(78), lock_page(298), lock_rec(25), lock_data(100001)
 trx_id(34A7), trx_state(LOCK_WAIT), trx_started(time..), trx_query(UPDATE ...)
 ```
 
-* 어떠
+* 어떤 커넥션이 어떤 커넥션을 기다리게 만드는지 확인
+```sql
+SELECT r.trx_id waiting_trx_id
+       r.trx_mysql_thread_id waiting_thread,
+       r.trx_query waiting_
+```
 
 ## 4.5 MySQL의 격리 수준
 
@@ -194,8 +200,8 @@ trx_id(34A7), trx_state(LOCK_WAIT), trx_started(time..), trx_query(UPDATE ...)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzI1MzY2NjY3LDEwNjY4OTU0MjYsLTIxND
-E0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjExOTksNDQ5MTkzNzY5
-LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMTAzNDIwNTU0NCwxNT
-gyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMjAyMzY0NTE0MywxMDY2ODk1NDI2LC0yMT
+QxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2
+OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMT
+U4MjQxOTIzMF19
 -->
