RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -183,7 +183,10 @@ trx_id(34A7), trx_state(LOCK_WAIT), trx_started(time..), trx_query(UPDATE ...)
 ```sql
 SELECT r.trx_id waiting_trx_id
        r.trx_mysql_thread_id waiting_thread,
-       r.trx_query waiting_
+       r.trx_query waiting_query,
+       b.trx_id blocking_trx_id,
+       b.trx_mysql_thread_id blocking_thread,
+       b.
 ```
 
 ## 4.5 MySQL의 격리 수준
@@ -200,7 +203,7 @@ SELECT r.trx_id waiting_trx_id
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAyMzY0NTE0MywxMDY2ODk1NDI2LC0yMT
+eyJoaXN0b3J5IjpbLTIzODczMzI1NSwxMDY2ODk1NDI2LC0yMT
 QxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2
 OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMT
 U4MjQxOTIzMF19
