RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -186,7 +186,7 @@ SELECT r.trx_id waiting_trx_id
        r.trx_query waiting_query,
        b.trx_id blocking_trx_id,
        b.trx_mysql_thread_id blocking_thread,
-       b.
+       b.trx_quer
 ```
 
 ## 4.5 MySQL의 격리 수준
@@ -203,8 +203,8 @@ SELECT r.trx_id waiting_trx_id
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIzODczMzI1NSwxMDY2ODk1NDI2LC0yMT
-QxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2
-OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLTEwMzQyMDU1NDQsMT
-U4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbMjE0MzM2OTE5OSwtMjM4NzMzMjU1LDEwNj
+Y4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjEx
+OTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMT
+AzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
 -->
