--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -186,7 +186,10 @@ SELECT r.trx_id waiting_trx_id
        r.trx_query waiting_query,
        b.trx_id blocking_trx_id,
        b.trx_mysql_thread_id blocking_thread,
-       b.trx_quer
+       b.trx_query blocking_query
+FROM information_schema.innodb_lock_waits w
+INNER JOIN information_schema.innodb_trx b ON b.trx_id = w.blocking_trx_id
+INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 ```
 
 ## 4.5 MySQL의 격리 수준
@@ -203,8 +206,8 @@ SELECT r.trx_id waiting_trx_id
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjE0MzM2OTE5OSwtMjM4NzMzMjU1LDEwNj
-Y4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjEx
-OTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMT
-AzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbLTEwMTA3MTE1NjgsLTIzODczMzI1NSwxMD
+Y2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIx
+MTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLT
+EwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
