RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -152,12 +152,12 @@
 3 : UPDATE employees SET birth_date = NOW(), hire_date = NOW() WHERE emp_no = 100001;
 ```
 * 1번이 업데이트 하면서 락 획득, 2/3번은 락 대기 상태.
-* `SHOW PROCESSLIST`
+* `SHOW PROCESSLIST` (p.185)
 	* 락 대기중인 프로세스의 State는 Updating으로 표시됨.
 	* 느낌 상으로 Updating인데 2~3초 실행 중이라면 아.. 락 대기중이구나 라고 알 수 있음.
 		* Primary key나 Index를 이용하는 경우에 한정.
 		* full scan 쿼리는 락 대기가 아니더라도 그 이상의 시간이 소요될 수 있음.
-* `SHOW ENGINE INNODB STATUS`
+* `SHOW ENGINE INNODB STATUS` (p.186)
 	* `TRANSACTIONS` 섹션
 	* 레코드를 오랫동안 잠그고 있는 프로세스가 있는지 여부를 확인
 		* 트랜잭션이 오랜 시간동안 실행되고 있는 줄을 찾는다.
@@ -179,7 +179,7 @@ lock_space(78), lock_page(298), lock_rec(25), lock_data(100001)
 trx_id(34A7), trx_state(LOCK_WAIT), trx_started(time..), trx_query(UPDATE ...)
 ```
 
-* 어떤 커넥션이 어떤 커넥션을 기다리게 만드는지 확인
+* 어떤 커넥션이 어떤 커넥션을 기다리게 만드는지 확인 (p.190)
 ```sql
 SELECT r.trx_id waiting_trx_id
        r.trx_mysql_thread_id waiting_thread,
@@ -191,6 +191,7 @@ FROM information_schema.innodb_lock_waits w
 INNER JOIN information_schema.innodb_trx b ON b.trx_id = w.blocking_trx_id
 INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 ```
+* 
 
 ## 4.5 MySQL의 격리 수준
 
@@ -206,8 +207,8 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTA3MTE1NjgsLTIzODczMzI1NSwxMD
-Y2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1MTAsLTYxNjIx
-MTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNTgyNDI1NjcsLT
-EwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbNzA5MzQwNzA0LC0yMzg3MzMyNTUsMTA2Nj
+g5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYxNTEwLC02MTYyMTE5
+OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMDU4MjQyNTY3LC0xMD
+M0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
