RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -194,7 +194,8 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 * 조회 결과
 	* 34A7 -> 34A6을 대기 중
 	* 34A7 -> 34A5를 대기 중
-	* 34A6 -> 34A5를 대기 중
+	* 34A6 -> 34A5를 대기 중 -> 34A5가 문제의 쿼리
+	* 34A5 정보는 표시되지 않음. innodb_trx 테이블에서 별도로 조회한다.
 	* 
 
 ## 4.5 MySQL의 격리 수준
@@ -211,8 +212,8 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM3OTIyMzgwMiwtMjM4NzMzMjU1LDEwNj
-Y4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2MTUxMCwtNjE2MjEx
-OTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMjA1ODI0MjU2NywtMT
-AzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMTA1NDAzNTExMSwxMzc5MjIzODAyLC0yMz
+g3MzMyNTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYx
+NTEwLC02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMD
+U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
