RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -196,9 +196,11 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 	* 34A7 -> 34A5를 대기 중
 	* 34A6 -> 34A5를 대기 중 -> 34A5가 문제의 쿼리
 	* 34A5 정보는 표시되지 않음. innodb_trx 테이블에서 별도로 조회한다.
-	* 
 
 ## 4.5 MySQL의 격리 수준
+### Isolation level
+* 동시에 여러 트랜잭션이 처리될 때, 특정 트랜잭션이 다른 트랜잭션에서 반영하거나 조회하는 데이터를 볼 수 있도록 허용할지 말지를 결정하는 수준.
+* DIRTY READ
 
 ### 4.5.1 READ UNCOMMITTED
 
@@ -212,8 +214,8 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA1NDAzNTExMSwxMzc5MjIzODAyLC0yMz
-g3MzMyNTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYx
-NTEwLC02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMD
-U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbNzQ0MTI1NjY4LDEzNzkyMjM4MDIsLTIzOD
+czMzI1NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1
+MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNT
+gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
