RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -198,12 +198,17 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 	* 34A5 정보는 표시되지 않음. innodb_trx 테이블에서 별도로 조회한다.
 
 ## 4.5 MySQL의 격리 수준
-### Isolation level
+#### Isolation level
 * 동시에 여러 트랜잭션이 처리될 때, 특정 트랜잭션이 다른 트랜잭션에서 반영하거나 조회하는 데이터를 볼 수 있도록 허용할지 말지를 결정하는 수준.
 * `DIRTY READ`인 `READ UNCOMMITTED`는 거의 사용되지 않음.
 * `SERIALIZABLE` 또한 동시성이 중요한 DB에서는 거의 사용되지 않음.
 * 뒤로 갈수록 격리 수준이 높아지며, 동시성도 떨어진다.
-* 격리 수준에 대해서 서버의 처리 성능은 SERIALIZABLE
+* 격리 수준에 따른 서버의 처리 성능은 `SERIALIZABLE` 외에는 큰 차이가 없다.
+
+#### 3가지 부정합 문제점
+| 구분 | Dirty Read | Non-Repeatable Read | Phantom Read |
+|--|--|--|--|
+| Read Uncommited | 발생 | 
 
 ### 4.5.1 READ UNCOMMITTED
 
@@ -217,8 +222,8 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgzNjU4NjA0NywxMzc5MjIzODAyLC0yMz
-g3MzMyNTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYx
-NTEwLC02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMD
-U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
+eyJoaXN0b3J5IjpbMTE3NTUxNTk5LDEzNzkyMjM4MDIsLTIzOD
+czMzI1NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1
+MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNT
+gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
 -->
