RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -208,7 +208,10 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 #### 3가지 부정합 문제점
 | 구분 | Dirty Read | Non-Repeatable Read | Phantom Read |
 |--|--|--|--|
-| Read Uncommited | 발생 | 
+| Read Uncommited | O | O | O |
+| Read Commited | X | O | O |
+| Repeatable Read | X | X | O<br>InnoDB : X |
+| Serializable | X | X | X |
 
 ### 4.5.1 READ UNCOMMITTED
 
@@ -222,8 +225,8 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE3NTUxNTk5LDEzNzkyMjM4MDIsLTIzOD
-czMzI1NSwxMDY2ODk1NDI2LC0yMTQxNDE3MTI2LC0zMzI2NjE1
-MTAsLTYxNjIxMTk5LDQ0OTE5Mzc2OSwyMDkwNjM0NzE1LDIwNT
-gyNDI1NjcsLTEwMzQyMDU1NDQsMTU4MjQxOTIzMF19
+eyJoaXN0b3J5IjpbLTE5MTg3NDAwODQsMTM3OTIyMzgwMiwtMj
+M4NzMzMjU1LDEwNjY4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2
+MTUxMCwtNjE2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMj
+A1ODI0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
 -->
