RealMysql/4. 트랜잭션과 잠금.md updated from https://stackedit.io/

--- a/RealMysql/4. 트랜잭션과 잠금.md
+++ b/RealMysql/4. 트랜잭션과 잠금.md
@@ -213,6 +213,9 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 | Repeatable Read | X | X | O<br>InnoDB : X |
 | Serializable | X | X | X |
 
+* Oracle 등 : Read Commited 수준을 주로 사용
+* MySQL : Repeatable Read 수준을 주로 사용
+
 ### 4.5.1 READ UNCOMMITTED
 
 ### 4.5.2 READ COMMITTED
@@ -225,8 +228,8 @@ INNER JOIN information_schema.innodb_trx r ON r.trx_id = r.requesting_trx_id;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MTg3NDAwODQsMTM3OTIyMzgwMiwtMj
-M4NzMzMjU1LDEwNjY4OTU0MjYsLTIxNDE0MTcxMjYsLTMzMjY2
-MTUxMCwtNjE2MjExOTksNDQ5MTkzNzY5LDIwOTA2MzQ3MTUsMj
-A1ODI0MjU2NywtMTAzNDIwNTU0NCwxNTgyNDE5MjMwXX0=
+eyJoaXN0b3J5IjpbMjA4MTE5MTc2MCwxMzc5MjIzODAyLC0yMz
+g3MzMyNTUsMTA2Njg5NTQyNiwtMjE0MTQxNzEyNiwtMzMyNjYx
+NTEwLC02MTYyMTE5OSw0NDkxOTM3NjksMjA5MDYzNDcxNSwyMD
+U4MjQyNTY3LC0xMDM0MjA1NTQ0LDE1ODI0MTkyMzBdfQ==
 -->
